# dcode-app-factory

./: .gitignore  AGENTS.md  IMPLEMENT.md  README.md  SPEC.md  SPEC_GAP_ANALYSIS.md  pyproject.toml  setup_script.md  tasks.md
agent_configs/engineering_loop/: micro_planner.json  shipper.json
agent_configs/product_loop/: researcher.json  structurer.json  validator.json
agent_configs/project_loop/: dispatcher.json
agent_configs/release_loop/: gatekeeper.json  release_manager.json
dcode_app_factory/: __init__.py  debate.py  loops.py  models.py  registry.py  utils.py
scripts/: factory_main.py
src/dcode_app_factory/: __init__.py  __main__.py  agent_runtime.py  backends.py  canonical.py  debate.py  llm.py  loops.py  model_selection.py  models.py  registry.py  settings.py  state_store.py  tools.py  utils.py
src/dcode_app_factory/agent_configs/engineering_loop/: arbiter.json  challenger.json  micro_planner.json  proposer.json  shipper.json
src/dcode_app_factory/agent_configs/product_loop/: researcher.json  structurer.json  validator.json
src/dcode_app_factory/agent_configs/project_loop/: dependency_manager.json  dispatcher.json  state_auditor.json
src/dcode_app_factory/agent_configs/release_loop/: gatekeeper.json  release_manager.json
tests/: conftest.py  test_factory.py  test_tools.py
