[project]
name = "dcode_app_factory"
version = "0.1.0"
description = "A skeleton implementation of an AI software product factory with product, project and engineering loops."
requires-python = ">=3.12"

# Runtime dependencies are intentionally empty. This skeleton package
# uses the Python standard library only.
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
