[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dcode_app_factory"
version = "0.1.0"
description = "A skeleton implementation of an AI software product factory with product, project and engineering loops."
requires-python = ">=3.12"

# Runtime dependencies are intentionally empty. This skeleton package
# uses the Python standard library only.
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dcode_app_factory = ["agent_configs/**/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
