[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dcode_app_factory"
version = "0.1.0"
description = "LangGraph and deepagents implementation of an AI software product factory with product, project, engineering, and release loops."
requires-python = ">=3.12"

dependencies = [
    "chromadb",
    "deepagents",
    "langchain",
    "langchain-openai>=1.1.9",
    "langgraph",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pydantic",
    "python-dotenv>=1.2.1",
    "rfc8785>=0.1.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dcode_app_factory = ["agent_configs/**/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
